Fix collapse functionality

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11915,8 +11915,24 @@ textarea.form-control-lg {
 
 .collapse-button {
   cursor: hover;
-  padding: 1.25rem 2rem;
+  font-size: 1.875rem;
+  padding: 1.875rem;
   font-family: "Oswald", Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.collapse-button:hover {
+  background-color: #FFB703;
+}
+
+div.card.card-body {
+  border-top: 5px solid #FFB703;
+  border-left: none;
+  border-right: none;
+  border-bottom: none;
+}
+
+.course-info-active {
+  background-color: #FFB703;
 }
 
 /*# sourceMappingURL=style.css.map */
